# howmanycontributors.com

./: .cspell.json  .gitignore  Cargo.toml  README.md  TODO  deny.toml  docker-compose.yml  docker-compose.yml.release
crates/backend/: Cargo.toml  Dockerfile.debug  Dockerfile.release  build-containers.sh
crates/backend/src/: config.rs  errors.rs  logging.rs  main.rs  metrics.rs  models.rs  program.rs
crates/backend/src/api/: endpoints.rs  errors.rs  misc.rs  mod.rs  routes.rs  state.rs
crates/backend/src/cache/: cache.rs  errors.rs  mod.rs
crates/backend/src/database/: database.rs  errors.rs  mod.rs  models.rs
crates/frontend/: .env  Cargo.toml  Dioxus.toml  Dockerfile.debug  Dockerfile.release  README.md  build-containers.sh  entrypoint.debug.sh  input.css  tailwind.config.js
crates/frontend/src/: error.rs  main.rs  routes.rs
crates/frontend/src/assets/: arrows.rs  logo.rs  logo_text.rs  logos.rs  menu.rs  mod.rs  theme.rs
crates/frontend/src/components/: alert.rs  buttons.rs  footer.rs  header.rs  hero.rs  leaderboard.rs  main_search.rs  mod.rs  repositories_table.rs  theme_switcher.rs
crates/frontend/src/hooks/: mod.rs  use_persistent.rs  use_theme.rs
crates/frontend/src/models/: api.rs  errors.rs  mod.rs
crates/frontend/src/pages/: about.rs  home.rs  leaderboard.rs  mod.rs  not_found.rs
crates/frontend/src/services/: depencencies.rs  dependencies.rs  leaderboard.rs  mod.rs  requests.rs  token.rs  websockets.rs
crates/github_scrapper/: Cargo.toml
crates/github_scrapper/src/: errors.rs  lib.rs  link_deps.rs  links.rs  main.rs  utils.rs
crates/http_health_checker/: Cargo.toml  README.md
crates/http_health_checker/src/: main.rs
database/: 000-initialization.sql  002-functions.sql  003-users.sh
fixtures/: sample.html
manifests/: README.md
manifests/grafana/: init.sh
manifests/prometheus/: prometheus.debug.yml  prometheus.yml
manifests/redis/: redis.conf
scripts/: build_release.sh  docker_volumes.sh  open_firefox.debug.sh  podman_volumes.sh
scripts/git_hooks/: pre-commit  setup.sh
