[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-recursion = "1"
axum = { version = "0", features = ["http1", "http2", "ws"] }
axum-macros = "0"
axum-prometheus = { version = "*", features = ["metrics-exporter-prometheus"] }
chrono = { version = "0" }
clap = { version = "4", features = ["derive", "env"] }
deadpool-postgres = { version = "*" }
deadpool-redis = { version = "0", features = ["cluster", "rt_tokio_1"] }
env_logger = "0"
github_scrapper = { path = "../github_scrapper" }
jsonwebtoken = { version = "9", features = ["use_pem"] }
log = "0"
metrics = { version = "0" }
metrics-exporter-prometheus = { version = "0", features = ["tokio"] }
rand = "0.8.5"
regex = { version = "*" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0"
thiserror = "1"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "full"] }
tokio-postgres = { version = "0", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-time-0_3",
    "with-bit-vec-0_6",
] }
tower = { version = "0", features = ["buffer"] }
tower_governor = { version = "0", features = ["axum", "tracing"] }
tower-http = { version = "0", features = [
    "compression-gzip",
    "decompression-gzip",
    "trace",
    "timeout",
    "auth",
    "uuid",
    "cors",
    "tokio",
    "sensitive-headers",
    "set-header",
    "normalize-path",
] }
tracing = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["fast-rng", "serde", "v4"] }
