[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
axum = { version = "0.8.4", features = ["http1", "http2", "ws"] }
axum-macros = "0.5.0"
axum-prometheus = { version = "0.8.0", features = ["metrics-exporter-prometheus"] }
chrono = { version = "0.4.41" }
clap = { version = "4.5.41", features = ["derive", "env"] }
deadpool-postgres = { version = "0.14.1" }
deadpool-redis = { version = "0.22.0", features = ["cluster", "rt_tokio_1"] }
env_logger = "0.11.8"
github_scrapper = { path = "../github_scrapper" }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
log = "0.4.27"
metrics = { version = "0.24.2" }
metrics-exporter-prometheus = { version = "0.17.2", features = ["tokio"] }
rand = "0.9.2"
regex = { version = "1.11.1" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_yaml = "0.9.34-deprecated"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "full"] }
tokio-postgres = { version = "0.7.13", features = [
    "with-uuid-1",
    "with-serde_json-1",
    "with-chrono-0_4",
    "with-time-0_3",
    "with-bit-vec-0_6",
] }
tower = { version = "0.5.2", features = ["buffer"] }
tower_governor = { version = "0.7.0", features = ["axum", "tracing"] }
tower-http = { version = "0.6.6", features = [
    "compression-gzip",
    "decompression-gzip",
    "trace",
    "timeout",
    "auth",
    "uuid",
    "cors",
    "tokio",
    "sensitive-headers",
    "set-header",
    "normalize-path",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["fast-rng", "serde", "v4"] }
