[package]
name = "frontend"
version = "0.1.0"
authors = ["Baptiste Roseau <broseau@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
chrono = { version = "0", features = ["serde"] }
dioxus = { version = "0", features = ["web", "router"] }
dioxus-logger = "0"
dotenvy_macro = { version = "0" }
gloo = { version = "0", features = ["futures"] }
lazy_static = "1"
log = "0"
parking_lot = "0"
regex = { version = "*" }
reqwest = { version = "0", features = ["json", "rustls-tls"] }
serde = "1"
thiserror = "1"
tracing = "0"
web-sys = { version = "0", features = [
    "Window",
    "DomTokenList",
    "Element",
    "MediaQueryList",
    "WebSocket",
] }

[dev-dependencies]
wasm-bindgen-test = { version = "0" }
